[package]
name = "prevayler-rs"
version = "0.2.0"
readme = "readme.md"
repository = "https://github.com/killertux/prevayler-rs"
description = "System prevalence in rust"
keywords = ["prevayler", "prevalence", "persistence"]
authors = ["Clemente <bruno.canguru@hotmail.com>"]
categories = ["database-implementations", "asynchronous "]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", optional = true}
serde_json = {version = "1", optional = true}
async-std = {version = "1.9", features = ["attributes"]}
futures = "0.3.14"

[dev-dependencies]
temp_testdir = "0.2"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["json_serializer"]
json_serializer = ["serde_json", "serde"]